[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/level_two/countdown_timer.gd" type="Script" id=1]
[ext_resource path="res://art/stopwatch.png" type="Texture" id=2]
[ext_resource path="res://ui/build_ui.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
resource_name = "size_pump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[node name="countdown_timer" type="Node2D"]
z_index = 160
script = ExtResource( 1 )

[node name="CountdownTimer" type="Timer" parent="."]

[node name="stopwatch" type="Sprite" parent="."]
position = Vector2( 32, 33 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../stopwatch")
autoplay = "size_pump"
anims/size_pump = SubResource( 1 )

[node name="TimeLabel" type="Label" parent="."]
margin_left = 58.0
margin_top = 17.0
margin_right = 255.0
margin_bottom = 61.0
theme = ExtResource( 3 )
text = "666s"

[node name="Dimmer" type="ColorRect" parent="."]
visible = false
margin_right = 1029.0
margin_bottom = 598.0
color = Color( 0.360784, 0.337255, 0.337255, 1 )
